test-cases/valid/reject/print_void_expression.ul
void main() {
    print foo(); // Cannot print result of void function
}

void foo() {
    print "Foo";
}
